# neonctl-rs

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: cli.rs  main.rs  prelude.rs  region.rs  style.rs  table.rs
src/api/: branch.rs  connection_string.rs  mod.rs  project.rs  user.rs
src/commands/: psql.rs
