[package]
name = "neonctl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
keyring = { version = "3.0.5", features = ["sync-secret-service"] }
prettytable-rs = "0.10.0"
rpassword = "7.3.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
term = "1.0.0"
ureq = { version = "2.10.0", features = ["json"] }
