[package]
name = "neonctl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.8"
clap = { version = "4.5.13", features = ["derive"] }
clap-cargo = "0.14.1"
inquire = "0.7.5"
keyring = { version = "3.0.5", features = ["sync-secret-service"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
term = "1.0.0"
ureq = { version = "2.10.0", features = ["json"] }
